# glue

./: .clang-format  CMakeLists.txt  build.bat  build.sh  conanfile.py  conanfile.txt
cmake/: glueConfig.cmake.in
glue/: CMakeLists.txt  compiler.h  config.h  export.h  macros.h  platform.h  precompiled.h
glue/core/: CMakeLists.txt
glue/core/src/: file.cpp
glue/crypto/: CMakeLists.txt  aes.cpp  aes.h  aes_test.cpp  base64.cpp  base64.h  bit_ops.h  donna128.h  hex.cpp  hex.h  loadstor.h  md5.cpp  md5.h  md5_test.cpp  mem_ops.h  poly1305.cpp  poly1305.h  rotate.h  rounding.h  salsa20.cpp  salsa20.h  secmem.h  sha256.cpp  sha256.h  sha2_32_armv8.cpp  sha2_32_x86.cpp  sha512.cpp  sha512.h
glue/crypto/ed25519/: ed25519.cpp  ed25519_fe.cpp  ed25519_fe.h  ge.cpp  sc_reduce.cpp
glue/file/: file.h  file_posix.cpp  file_win32.cpp  path.cpp  path.h
glue/filesystem/: CMakeLists.txt  file.cpp  file.h  file_posix.cpp  file_win32.cpp  path.cpp  path.h
glue/log/: CMakeLists.txt  android_sink.h  console_sink.h  file_sink.h  formatter.h  init.h  log.h  logger.h  record.h  severity.h  sink.h  test.cpp  util.h
glue/logging/: CMakeLists.txt  android_sink.h  console_sink.h  file_sink.h  formatter.h  helpers.cpp  helpers.h  init.h  log.h  log_sink.cpp  log_sink.h  logger.cpp  logger.h  logger_registry.cpp  logger_registry.h  record.cpp  record.h  severity.h  sink.cpp  sink.h  test.cpp  types.h  util.h
glue/memory/: atomic.h  byte_order.h  cpu_memory.h  heap_block.h  memory_allocator.h  object_pool.h  reference_counted_object.h  singleton.h
glue/ml/: CMakeLists.txt  utils.cpp  utils.h
glue/ml/cv/: bgr_rotate.h  image2tensor.cc  image_convert.h  image_flip.cc  image_preprocess.cc  image_preprocess.h  image_resize.cc  image_resize.h
glue/ml/nn/: inference_helper.cpp  inference_helper.h  inference_helper_ncnn.cpp  inference_helper_ncnn.h  inference_helper_snpe.cpp  inference_helper_snpe.h  inference_helper_tensorrt.cpp  inference_helper_tensorrt.h  predictor.h  predictor_snpe.cpp  predictor_snpe.h  predictor_tensorrt.cpp  predictor_tensorrt.h  tensor.cpp  tensor.h  types.h
glue/ml/util/: any.h  charconv.h  container.h  env.h  fast_type_id.h  fast_type_id_test.cc  float16.h  float16_test.cc  float16_test.cu  hash.h  io.h  macros.h  md5.h  model_util.h  string.h  string_test.cc  timer.h  timer_test.cc  varient.h  varient_test.cc
glue/thread/: atomic.h  barrier.cpp  barrier.h  event.h  latch.h  runnable.h  spinlock.cpp  spinlock.h  thread.h  thread_win32.cpp
include/glue/base/: ASCII.h  Array.h  ArrayBase.h  Atomic.h  Barrier.h  ByteOrder.h  CharacterFunctions.h  CompilerSupport.h  CountDownLatch.h  CpuInfo.h  Event.h  Exception.h  File.h  FpsCounter.h  HeapBlock.h  Identifier.h  LeakedObjectDetector.h  Log.h  MathsFunctions.h  Memory.h  MemoryMappedFile.h  Mutex.h  Optional.h  PerformanceCounter.h  PlatformDefs.h  Random.h  Range.h  ReferenceCountedObject.h  RelativeTime.h  ScopedLock.h  SpinLock.h  StandardHeader.h  StatisticsAccumulator.h  String.h  StringArray.h  StringPool.h  StringRef.h  SystemStats.cpp  SystemStats.h  (+90 more)
modules/: CMakeLists.txt
modules/core/: CompilerSupport.h  PlatformDefs.h  StandardHeader.h  TargetPlatform.h
modules/crypto/: base64_test.cpp  bswap.h  key_spec.h  md5.cpp  md5.h  misc.h
modules/cv/: bgr_rotate.cc  image2tensor.h  image2tensor_fpga.cc  image2tensor_fpga.h  image_convert.cc  image_flip.h  image_rotate.cc  image_rotate.h  parallel_defines.h  thread_pool.cc
modules/nn/: predictor.cpp  predictor_ncnn.cpp  predictor_ncnn.h
src/: CMakeLists.txt
src/base/: Barrier.cpp  CMakeLists.txt  CharacterFunctions.cpp  CountDownLatch.cpp  CpuInfo.cpp  Event.cpp  Exception.cpp  File.cpp  FpsCounter.cpp  Identifier.cpp  Log.cpp  MemoryMappedFile.cpp  PerformanceCounter.cpp  Random.cpp  RelativeTime.cpp  SpinLock.cpp  String.cpp  StringArray.cpp  StringPool.cpp  SystemStats.cpp  SystemStats_android.cpp  SystemStats_linux.cpp  SystemStats_win32.cpp  TemporaryFile.cpp  Thread.cpp  ThreadPool.cpp  Time.cpp  Version.cpp  barrier.cc  barrier.cpp  countdown_latch.cc  countdown_latch.cpp  debug_break.h  exception.cc  exception.cpp  file.cc  file.cpp  file_mapping.cc  file_mapping.cpp  fps_counter.cc  (+21 more)
src/crypto/: CMakeLists.txt  aes.cpp  aes_test.cpp  base64.cpp  bit_ops.h  bswap.h  codec_base.h  ct_utils.h  donna128.h  ed25519.cpp  ed25519_fe.cpp  ed25519_fe.h  ed25519_internal.h  ge.cpp  hex.cpp  loadstor.h  md5.cpp  md5_test.cpp  mem_ops.cpp  mem_ops.h  mul128.h  poly1305.cpp  rotate.h  rounding.h  salsa20.cpp  sc_muladd.cpp  sc_reduce.cpp  secmem.h  sha256.cpp  sha2_32_armv8.cpp  sha2_32_x86.cpp  sha512.cpp  sodium.cpp
src/crypto/ed25519/: ed25519.cpp  ed25519_fe.cpp  ge.cpp  sc_muladd.cpp  sc_reduce.cpp
src/cv/: CMakeLists.txt  bgr_rotate.cc  bgr_rotate.cpp  image2tensor.cc  image2tensor.cpp  image2tensor_fpga.cc  image_convert.cc  image_convert.cpp  image_flip.cc  image_flip.cpp  image_preprocess.cc  image_preprocess.cpp  image_resize.cc  image_resize.cpp  image_rotate.cc  image_rotate.cpp  thread_pool.cc  thread_pool.cpp
src/nn/: CMakeLists.txt  image2tensor.cpp  predictor.cc  predictor.cpp  predictor_ncnn.cc  predictor_ncnn.cpp  predictor_snpe.cc  predictor_snpe.cpp  predictor_tensorrt.cc  predictor_tensorrt.cpp  tensor.cc  tensor.cpp
src/nn/ncnn/: predictor_impl.cpp  predictor_impl.h
src/nn/snpe/: CreateUserBuffer.hpp  Util.hpp  predictor_impl.cpp  predictor_impl.h  udlExample.hpp
src/nn/tensorrt/: common.h  logger.cpp  logger.h  logging.h  predictor_impl.cpp  predictor_impl.h
test/: CMakeLists.txt  base64_test.cc
test/cmake/Catch2/: Catch2ConfigVersion.cmake
test/src/: main.cpp
test/src/base/: barrier_test.cpp  expected.test.cpp  expected_test.cpp  file_mapping_test.cpp  object_pool.test.cpp  object_pool_test.cpp  optional.test.cpp  optional_test.cpp  result.constexpr.test.cpp  result.failure.test.cpp  result.test.cpp  tribool.test.cpp  tribool_test.cpp
test/src/crypto/: aes_test.cpp  base64_test.cpp  hex_test.cpp  md5_test.cpp  salsa20_test.cpp  sha256_test.cpp  sha512_test.cpp  sodium_test.cpp
tests/: CMakeLists.txt
(+146 files in other folders)
