#
# Copyright © 2017 zhangyao. All rights reserved.
# SPDX-License-Identifier: MIT
#

# add_definitions(-D_AMD64_)

# add_executable(aes aes.h aes.cc aes_test.cc)

# add_executable(md5 md5_test.cc hex.h hex.cc sha256.h sha256.cc sha512.h sha512.cc)

# add_executable(base64 base64.h base64.cc base64_test.cc)
